# REM

./: .gitignore  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  TEACHING.md  index.html  pyproject.toml
bench/: sampling_sweep_public.md
bench/battery/: FINDINGS.md  canary_b1000_oldgold.json  canonicalize_audit.json  diag_031748ae_w64k.json  diag_031748ae_w64k_state.json  mix_report.json  mix_report_lexical.json  mix_report_recency_031748ae.json  mix_report_selectors_npufree.json  step0_031748ae.json  supersession_endtoend.json  supersession_instanceaware.json  thermal_trace.csv  thermal_trace_b2000.csv  throughput_probe.json  tight_smoke_b3000_limit1.json  tight_sweep_b1000_limit3.json  tight_sweep_b2000_limit3.json  valid_b1000_oldgold.json  write_recall_audit.json
bench/contention/: METHODOLOGY.md  README.md  verify_contention.py
bench/memory_methods/: README.md  capture_integrity.json  decision_gate.json  decision_gate_answers.json  decision_gate_path_a_answers.json  decision_gate_path_a_v2.json  decision_gate_path_a_v2_answers.json  development_manifest.json  diagnostic_fixtures.json  embedding_identity_keycomp.json  embedding_identity_largeset.json  embedding_identity_qwen.json  episode_card_wallclock.json  extraction_recall_ku.md  freshcheck_supersession_audit_report.md  gate5_operational.json  heldout_eval_answers.json  heldout_temporal_eval.md  numeric_merge_audit.json  numeric_merge_audit_fresh.json  path_a_confirmation_criteria.json  path_b_residual_fragmentation.md  path_b_role_key_audit.json  path_b_role_key_audit.md  rem_supersession_freshcheck_2026-06-30.md  rem_supersession_heldout_audit.md  rem_supersession_heldout_audit_2026-07-01.md  rem_supersession_heldout_audit_2026-07-02.md  rem_supersession_heldout_audit_2026-07-02_0711.md  role_scoped_newest_pref_prototype.md  run-artifact.schema.json  supersession_instanceaware_freshcheck.json  temporal_scaffold_probe.json  typed_band_cost.json  typed_identity_probe.json
docs/: REM-memory-architecture-spec.md  agent-horizon-harness-charter.md  direction-review-2026-07-03.md  hardware-context.md  implementation-roadmap.md  memory-systems-research-ledger.md  npu-placement-benchmark.md  paper-evaluation-2512.13282v1.md  path-a-confirmation-freeze.md  rem-closeout-and-revisit.md  repo-review-2026-06-17.md
evals/: __init__.py
evals/battery/: README.md  __init__.py  aggregate.py  answerer.py  canonicalize_audit.py  capture_states.py  (+13 more)
tests/: __init__.py  conftest.py
(+161 files in other folders)
