[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rem"
version = "0.1.0"
description = "REM: Co-Processor Memory Maintenance for On-Device LLM Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "pydantic-settings",
    "filelock",
    "json-repair==0.60.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]
# Needed to run the comparative memory battery (independent Claude judge).
eval = [
    "anthropic",
]
# The contention-aware scheduler reads NPU/iGPU telemetry via the xdna-top
# monitor. Install from https://github.com/boxwrench/xdna-top — the core REM
# memory/compaction library does not require it.
scheduler = [
    "xdna-top",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Resolve `import rem` to this repo's own src/ first, so a stray editable
# install of another checkout can never silently shadow the code under test.
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "npu: tests that require the physical NPU hardware to run",
    "slow: slow running tests",
]
addopts = "-q -m 'not npu'"
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
# Eval/bench scripts bootstrap sys.path (sys.path.insert(...)) before importing
# rem/evals, so imports intentionally follow executable statements (E402). Scoped to
# the eval trees only; src/ stays under the default rules.
"evals/**" = ["E402"]
